# occt-js

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  SKILLS.md  package-lock.json  package.json  playwright.config.mjs  pnpm-lock.yaml
.codex/skills/releasing-occt-js/: SKILL.md
.github/workflows/: deploy-demo.yml
.planning/: HANDOFF.json  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  REVIEW.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-REQUIREMENTS.md  v1.10-REQUIREMENTS.md  v1.10-ROADMAP.md  v1.11-REQUIREMENTS.md  v1.11-ROADMAP.md  v1.12-REQUIREMENTS.md  v1.12-ROADMAP.md  v1.13-REQUIREMENTS.md  v1.13-ROADMAP.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md  v1.3-REQUIREMENTS.md  v1.4-REQUIREMENTS.md  v1.5-MILESTONE-AUDIT.md  v1.5-REQUIREMENTS.md  v1.6-MILESTONE-AUDIT.md  v1.6-REQUIREMENTS.md  v1.7-REQUIREMENTS.md  v1.8-REQUIREMENTS.md  v1.8-ROADMAP.md  v1.9-MILESTONE-AUDIT.md  v1.9-REQUIREMENTS.md
.planning/phases/01-wasm-build-dist-baseline/: .continue-here.md  01-01-PLAN.md  01-02-PLAN.md  01-03-PLAN.md  01-03-SUMMARY.md  01-RESEARCH.md  01-VALIDATION.md
.planning/phases/02-root-runtime-contract/: 02-01-PLAN.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-RESEARCH.md  02-VALIDATION.md
.planning/phases/03-downstream-consumption-contract/: 03-01-PLAN.md  03-02-PLAN.md  03-02-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.planning/seeds/: SEED-001-web-exact-brep-measurement.md
demo/: index.html  package-lock.json  package.json  picking.js  server.mjs  vite.config.js
demo/src/: App.jsx  globals.css  main.jsx
demo/src-tauri/: Cargo.toml  tauri.conf.json
demo/tests/: app-home.spec.mjs  app-shell.test.mjs  auto-orient.test.mjs  camera-input.test.mjs  demo.spec.mjs  desktop-file.test.mjs  desktop-menu.test.mjs  desktop-runtime.test.mjs  desktop-shortcuts.test.mjs  exact-selection-bridge.test.mjs  generated-tool-legend.test.mjs  generated-tool-spec-builder.test.mjs  generated-tool-validation.test.mjs  interaction-regression.spec.mjs  measurement-actions.test.mjs  measurement-overlay.test.mjs  sample-autoload.test.mjs  sample-model.test.mjs  use-occt-runtime-contract.test.mjs  viewer-actions.test.mjs  viewer-store.test.mjs
docs/demo/: index.html
docs/plan/: cam-measurement-matrix.md  next-phase.md
docs/sdk/: measurement.md
docs/specs/: 2026-03-24-full-brep-topology-design.md  2026-03-24-full-brep-topology-plan.md  2026-03-24-occt-modules-design.md  2026-03-24-picking-interaction-design.md  2026-03-24-picking-interaction-plan.md  2026-03-25-react-viewer-design.md  2026-03-25-react-viewer-plan-1.md  2026-03-25-react-viewer-plan-2.md  2026-03-27-agents-doc-consolidation-plan.md  2026-03-27-analysissitus-regression-fixtures-design.md  2026-03-27-format-routing-and-point-cloud-boundary-design.md  2026-03-27-realistic-cad-regression-fixtures-design.md  2026-03-27-step-iges-root-mode-design.md  2026-03-27-tauri-desktop-mvp-design.md  2026-03-27-tauri-desktop-mvp-plan.md  2026-03-27-wasm-build-reproducibility-design.md  2026-03-27-wasm-build-reproducibility-plan.md  2026-03-27-windows-desktop-chrome-design.md  2026-03-27-windows-desktop-chrome-plan.md  2026-03-28-optimal-orientation-design.md  2026-03-28-optimal-orientation-plan.md  2026-03-30-babylon-viewer-packages-design.md  2026-03-30-babylon-viewer-packages-plan.md  2026-04-21-revolved-shape-runtime-boundary-design.md
src/: composite-shape.cpp  composite-shape.hpp  exact-model-store.cpp  exact-model-store.hpp  exact-query.cpp  exact-query.hpp  extruded-shape.cpp  extruded-shape.hpp  geometry-transform.cpp  geometry-transform.hpp  helical-sweep.cpp  helical-sweep.hpp  importer-brep.cpp  importer-brep.hpp  importer-iges-staging.cpp  importer-iges-staging.hpp  importer-iges.cpp  importer-iges.hpp  importer-step.cpp  importer-step.hpp  importer-utils.cpp  importer-utils.hpp  importer-xde.cpp  importer-xde.hpp  importer.cpp  importer.hpp  js-interface.cpp  orientation.cpp  orientation.hpp  profile-2d.cpp  profile-2d.hpp  revolved-tool.cpp  revolved-tool.hpp
test/: chassis-2roots.stp  composite_shape_spec_contract.test.mjs  debug_edge_transform.mjs  dist_contract_consumers.test.mjs  esm_entry_contract.test.mjs  exact_chamfer_contract.test.mjs  exact_compound_hole_contract.test.mjs  exact_generated_composite_shape_contract.test.mjs  exact_generated_extruded_shape_contract.test.mjs  exact_generated_helical_sweep_contract.test.mjs  exact_generated_revolved_tool_contract.test.mjs  exact_hole_contract.test.mjs  exact_model_lifecycle_contract.test.mjs  exact_pairwise_measurement_contract.test.mjs  exact_placement_contract.test.mjs  exact_primitive_queries_contract.test.mjs  exact_query_store_performance_contract.test.mjs  exact_ref_mapping_contract.test.mjs  exact_relation_contract.test.mjs  extruded_shape_spec_contract.test.mjs  freecad_hole_puzzle_counterbore.brep  freecad_hole_puzzle_countersink.brep  gehause_rohteil_with-names.STEP  generated_composite_shape_contract.test.mjs  generated_extruded_shape_contract.test.mjs  generated_helical_sweep_contract.test.mjs  generated_revolved_tool_contract.test.mjs  geometry_transform_export_contract.test.mjs  helical_sweep_spec_contract.test.mjs  import_appearance_contract.test.mjs  load_occt_factory.mjs  load_occt_factory.test.mjs  orientation_reference_golden.json  package_tarball_contract.test.mjs  planning_archive_contract.test.mjs  profile_2d_spec_contract.test.mjs  release_governance_contract.test.mjs  revolved_tool_spec_contract.test.mjs  secondary_surface_contract.test.mjs  step_selected_occurrence_contract.test.mjs  (+15 more)
tools/: build_wasm.sh  build_wasm_win.bat  build_wasm_win_dist.bat  build_wasm_win_release.bat  check_wasm_prereqs.mjs  export_generated_tool_artifacts.mjs  generate_esm_runtime_entry.mjs  setup_emscripten_win.bat
(+349 files in other folders)
